--- a/tournament/style.css
+++ b/tournament/style.css
@@ -5,29 +5,9 @@ body {
 	text-align: center;
 	text-shadow: 1px 1px rgb(0 0 0 / 20%);
 }
+
 div {
 	margin: 1rem;
-}
-.rainbow {
-	animation: toright 8s linear infinite;
-	background: linear-gradient(-90deg, purple,red,yellow,rgb(90,255,90),cyan,rgb(100,100,255),purple);
-	background-size: 50vw 20px;
-	-webkit-background-clip: text;
-	background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-.fade {
-	animation: fadein 8s linear infinite alternate;
-}
-
-@keyframes fadein {
-	0%, 2% { opacity: 0 }
-	60%, 100% { opacity: 1 }
-}
-
-@keyframes toright {
-	0% { background-position: 0 }
-	100% { background-position: 100vw }
 }
 
 input {
@@ -83,4 +63,51 @@ video {
 	height: 1px;
 	width: 1px;
 	opacity: 0.01;
+}
+
+#alertcontainer {
+	margin: 0;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	display: flex;
+	align-items: center;  /* vertical */
+	justify-content: center;  /* horizontal */
+	visibility: hidden;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+#alert {
+	position: fixed;
+	margin: auto;
+	border: 1px solid black;
+	border-radius: 5px;
+	box-shadow: 10px 10px 10px rgb(0 0 0 / 20%);
+	min-width: 10em;
+	padding: 1em;
+	background-color: white;
+}
+
+.fade {
+	animation: fadein 8s linear infinite alternate;
+}
+
+.rainbow {
+	animation: toright 8s linear infinite;
+	background: linear-gradient(-90deg, purple,red,yellow,rgb(90,255,90),cyan,rgb(100,100,255),purple);
+	background-size: 50vw 20px;
+	-webkit-background-clip: text;
+	background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+@keyframes fadein {
+	0%, 2% { opacity: 0 }
+	60%, 100% { opacity: 1 }
+}
+
+@keyframes toright {
+	0% { background-position: 0 }
+	100% { background-position: 100vw }
 }
