--- a/tournament/style.css
+++ b/tournament/style.css
@@ -69,9 +69,9 @@ video {
 	margin: 0;
 	left: 0;
 	top: 0;
-	width: 100%;
-	height: 100%;
-	position: fixed;
+	min-width: 100%;
+	min-height: 100%;
+	position: absolute;
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;  /* vertical */
