--- a/tournament/style.css
+++ b/tournament/style.css
@@ -57,7 +57,7 @@ th {
 	cursor: pointer;
 }
 tr:hover {
-	background: rgba(255, 255, 255, 0.5) !important;
+	border: 1px solid #ffffffbb;
 }
 tr:nth-child(odd) {
 	background-color: rgba(255, 255, 255, 0.2);
