--- a/tournament/style.css
+++ b/tournament/style.css
@@ -73,9 +73,10 @@ video {
 	margin: 0;
 	left: 0;
 	top: 0;
-	min-width: 100%;
-	min-height: 100%;
-	position: absolute;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	overflow: auto;
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;  /* vertical */
