--- a/chess/chess.css
+++ b/chess/chess.css
@@ -23,6 +23,10 @@ button {
 	min-width: 2em;
 }
 
+div {
+	margin: 0.5em;
+}
+
 input[type=number] {
 	width: 2em;
 }
@@ -65,6 +69,20 @@ input[type=number] {
 	position: relative;
 	/* For relative position absolute children. */
 	white-space: pre;
+}
+
+#caps0, #caps1 {
+	font-size: 0.5em;
+}
+
+#logtext {
+	height: 8em;
+	overflow: auto;
+	width: 8em;
+}
+
+.dead {
+	rotate: -90deg;
 }
 
 .w {
