--- a/chess/chess.css
+++ b/chess/chess.css
@@ -75,13 +75,26 @@ input[type=number] {
 	font-size: 0.5em;
 }
 
+#fenbox {
+	width: 22em;
+}
+
 #logtext {
 	height: 8em;
 	overflow: auto;
 	width: 8em;
 }
 
-.dead {
+.safe {
+	background-color: green;
+}
+
+.unsafe {
+	background-color: transparent;
+}
+
+.mate {
+	background-color: red !important;
 	rotate: -90deg;
 }
 
@@ -108,6 +121,25 @@ input[type=number] {
 	line-height: 1em;
 	text-align: center;
 	cursor: pointer;
+}
+
+.pos {
+	height: 1em;
+	line-height: 1em;
+	width: 1em;
+	display: block;
+	opacity: 0.5;
+	pointer-events: none;
+	position: absolute;
+}
+
+.pos>span {
+	bottom: 0;
+	display: block;
+	font-size: 3mm;
+	height: 1em;
+	width: 10mm;
+	color: gray;
 }
 
 .piece {
